# black-hat-python

./: .gitignore  README.md  main.py  pyproject.toml
.zed/: settings.json
chapter_01/: notes.md
chapter_02/: netcat.py  notes.md  proxy.py  ssh_cmd.py  ssh_rcmd.py  ssh_server.py  tcp_client.py  tcp_server.py  udp_client.py
chapter_03/: ip_ctypes.py  ip_struct.py  notes.md  scanner.py  sniffer.py  sniffer_ip_header_decode.py  sniffer_with_icmp.py
chapter_04/: arper.py  detector.py  mail_sniffer.py  mail_sniffer_bpf.py  notes.md  recapper.py
chapter_05/: bruter.py  get_request.py  make_request.py  mapper.py  notes.md  post_request.py  request_bs4.py  request_lxml.py  wordpress_killer.py
chapter_06/: bhp_bing.py  bhp_fuzzer.py  bhp_wordlist.py  notes.md
chapter_07/: git_trojan.py  notes.md
chapter_08/: keylogger.py  notes.md  sandbox_detect.py  screenshotter.py  shell_exec.py
chapter_09/: cryptor.py  email_exfil.py  exfil.py  key.pri  key.pub  mysecrets.txt  notes.md  paste_exfil.py  transmit_exfil.py
chapter_10/: bhservice.py  bhservice.spec  file_monitor.py  netcat.spec  notes.md  process_monitor.py
chapter_11/: aslrcheck.py  notes.md
