[project]
name = "black-hat-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.7.5"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "burp>=1.27",
    "htmlparser>=0.0.2",
    "lxml>=5.4.0",
    "opencv-python>=4.13.0.90",
    "paramiko>=3.5.1",
    "pycryptodomex>=3.23.0",
    "pywin32>=308",
    "pywinhook>=1.6.2",
    "requests>=2.31.0",
    "scapy>=2.7.0",
]

[tool.uv.workspace]
members = [
    "chapter_07/bhptrojan",
]
